--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,22 @@
     "function-paren-newline": [
       "error",
       "consistent"
+    ],
+    "jsx-a11y/anchor-is-valid": [
+      "error",
+      {
+        "components": [
+          "Link"
+        ],
+        "specialLink": [
+          "to"
+        ],
+        "aspects": [
+          "noHref",
+          "invalidHref",
+          "preferButton"
+        ]
+      }
     ]
   }
 }
