--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-calendar": "^2.13.5",
     "react-dom": "^16.2.0",
     "react-helmet": "^5.2.0",
+    "react-motion-drawer": "^2.1.7",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
