--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
     "expect": true,
     "jest": true,
     "afterEach": true,
-    "Audio": true
+    "Audio": true,
+    "window": true
   },
   "rules": {
     "function-paren-newline": [
